# EVM

./: .gitignore  68230.INI  68681.INI  CLAUDE.md  COMPLETE_INSTRUCTION_VERIFICATION.md  CONSOLE_DEBUG_GUIDE.md  CPU_INSTRUCTION_ANALYSIS.md  CPU_INSTRUCTION_INDEX.md  CPU_INSTRUCTION_QUICK_REFERENCE.md  DEBUG.INI  EVMROM.INI  EVMSIM.INI  EXTRACTION_INDEX.md  FINAL_TEST_GUIDE.md  FIX_APPLIED.md  GDI32.def  INSTRUCTION_EXTRACTION_SUMMARY.txt  INSTRUCTION_QUICK_REFERENCE.txt  INSTRUCTION_VERIFICATION_REPORT.md  KERNEL32.def  LICENSE  MC68020_INSTRUCTION_EXTRACT.md  PS20.S19  PS20_new.S19  QUICK_TEST_NOW.md  README_EXTRACTION.txt  ROM_EXECUTION_REPORT.md  TEST_FIX_NOW.md  USER32.def  WASM_FIX_SUMMARY.md  WASM_LOADER_FIX.md  dllImport.inc  evmsim.pbi  evmsim.pbo  evmsim.pbt  fix-case.sh  readme.txt  test_browser_execution.js  test_http_interface.sh  test_rom_execution.js  (+1 more)
68230/: 68230.c  68230.def  68230.h  68230.mak  68230.rc  68230.rh  port.c  port.h  readme.txt  writes.c  writes.h
68681/: 68681.c  68681.def  68681.h  68681.mak  68681.rc  68681.rh  file.c  file.h  popup.c  popup.h  printer.c  printer.h  readme.txt  state.c  state.h  updown.c  updown.h  vt100.c  vt100.h
EVMSim/: EVMSIM.mak  STCOM.H  STEACALC.H  STFLAGS.C  STFLAGS.H  STIDENT.H  STMAIN.H  STMEM.H  STPOPUP.C  STSTDDEF.H  Stcom.c  Stexep.c  Stmain.c  commdlg.h  macros.h  readme.txt  resource.h  steacalc.c  stmem.c  stpopup.h  struntim.h  ststartw.c  ststartw.h  ststate.c  sttable.c  stwin.def  stwin.rc  stwin.rh  windows-compat.h
VTune/: CLOCK001.tb3  CLOCK002.tb3  Clock001.STS  Clock001.mdb  Clock002.STS  Clock002.ldb  Clock002.mdb  EVMSIM.vts
evm-web/: README.md  WEB_IMPLEMENTATION_SUMMARY.md
evm-web/evm-core/: CMakeLists.txt  REFACTORING_PLAN.md  build.sh
evm-web/evm-core/include/: STCOM.H  STEXEP.H  STFLAGS.H  STMEM.H  STSTDDEF.H  cpu_core.h  macros.h  simulator.h  stdll.h  ststate.h
evm-web/evm-core/src/: Stexep.c  cpu_core.c  cpu_core_new.c  cpu_instructions.c  cpu_instructions_real.c  cpu_instructions_wrapper.c  exception_handlers.c  instruction_stubs.c  simulator.c  simulator_modules.c  steacalc.c  stmem.c  sttable.c
evm-web/evm-core/wasm/: bindings.c
evm-web/web/: analyze_rom.mjs  package-lock.json  package.json  test_cpu_state.mjs  test_evm.js  test_evm.mjs  test_execution.mjs  test_full.mjs  test_jsr.mjs  test_pc_multi_step.mjs  test_pc_progression.mjs  test_play.mjs  test_reset_vectors.mjs  test_rom_disasm.mjs  test_rom_load_debug.mjs  test_s19_parser.mjs  test_stack_init.mjs  test_step.mjs  test_step_debug.mjs  test_unreachable.mjs  vite.config.ts
evm-web/web/public/: PS20.S19  evm.js.js  evm.js.wasm  evm.wasm  simulator.worker.ts  test_program.S19  valid_program.S19
evm-web/web/src/: App.css  App.tsx
evm-web/web/src/components/: CPURegisters.module.css  CPURegisters.tsx  ControlPanel.module.css  ControlPanel.tsx  Disassembler.module.css  Disassembler.tsx  MemoryInspector.module.css  MemoryInspector.tsx  PeripheralMonitor.module.css  PeripheralMonitor.tsx  Terminal.module.css  Terminal.tsx
evm-web/web/src/hooks/: useSimulator.ts
evm-web/web/src/utils/: s19Parser.ts
evm-web/web/src/workers/: simulator.worker.ts
evmram/: evmram.c  evmram.def  evmram.mak  readme.txt
evmrom/: binary.c  binary.h  evmrom.c  evmrom.def  evmrom.h  evmrom.mak  readme.txt  s19.c  s19.h
